# PREDUN

./: .gitignore  README.md  requirements-dagster.txt
exploratory_analysis/: 01_student_history_EDA.ipynb
ingestion/: 01_fix_clean_data_pre_ingestion.py  01_format_history_data_pre_ingestion.py  02_fix_clean_students_pre_ingestion.py  02_format_students_pre_ingestion.py  03_fix_clean_percentage_pre_ingestion.py  03_format_percentage_pre_ingestion.py  04_ingest_to_staging.py  ingest.py  refresh_canonical.sql  tables_creation.sql
initial-phase-data-fix/: 01_fix_data.py  05_clean_student_list.py  06_clean_student_list.py  README.md  fix_data.ipynb  fix_data.py  fix_data_02.py  (+9 more)
predun_dagster/: README.md  classification_report.txt  pyproject.toml  setup.cfg  setup.py
predun_dagster/ingestion/: 01_format_history_data_pre_ingestion.py  02_format_students_pre_ingestion.py  03_format_percentage_pre_ingestion.py  04_ingest_to_staging.py  tables_creation.sql
predun_dagster/ingestion/mappings/fix_and_clean/: percentage_v2024_2C.yaml  percentage_v2025_1C.yaml  percentage_v2025_2C.yaml  students_v2024_2C.yaml  students_v2025_1C.yaml  students_v2025_2C.yaml  v2024_2C.yaml  v2025_1C.yaml  v2025_2C.yaml
predun_dagster/predun_dagster/: __init__.py  constants.py  definitions.py  drift_utils.py  etl_job.py  etl_ops.py  jobs.py  jobs_ingestion.py  monitoring.py  partitions.py  resources.py  sensors.py
predun_dagster/predun_dagster/assets/: __init__.py  dbt_assets.py  drift_assets.py  ingestion_assets.py  ml_assets.py
predun_dagster/predun_dagster_tests/: test_monitoring.py
(+67 files in other folders)
