[project]
name = "predun_dagster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
    "dagster-dbt>=0.23.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary",
    "pandas",
    "scikit-learn",
    "lightgbm",
    "mlflow>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "predun_dagster.definitions"
code_location_name = "predun_dagster"

[tool.setuptools.packages.find]
exclude=["predun_dagster_tests"]
